# infa4sem

./: CMakeLists.txt  README.txt
lab1/: CMakeLists.txt  README.txt  demo_gmsh.cpp  test_gmsh.py
lab1/inp/: LowPoly_Toothless_Ntermation.stl  tor.stl
lab2/: CMakeLists.txt  README.txt  drag_fire.cpp  tor.cpp
lab3/: CMakeLists.txt  README.txt  main.cpp
mini_project/: CMakeLists.txt
mini_project/src/: CMakeLists.txt
mini_project/src/mini-project/: Consts.hpp  Exception.hpp  GradientDescent.cpp  Mesh.cpp  Mesh.hpp  Ray.cpp  Ray.hpp  Utility.hpp  Writer.cpp  Writer.hpp
mini_project/src/mini-project/func_refraction/: BaseFunction.hpp  LinearFunction.hpp  SinusFunction.hpp
mini_project/src/mini-project/search_methods/: BaseSearchMethod.hpp  Bisection.hpp  GradientDescent.hpp
mini_project/tests/: CMakeLists.txt  README.txt  test_2d.cpp
mini_project/tests/googletest-master/docs/: advanced.md  gmock_cook_book.md  gmock_faq.md  pkgconfig.md  quickstart-bazel.md  quickstart-cmake.md
mini_project/tests/googletest-master/docs/reference/: matchers.md
mini_project/tests/googletest-master/googlemock/: CMakeLists.txt
mini_project/tests/googletest-master/googlemock/include/gmock/: gmock-matchers.h  gmock-spec-builders.h
mini_project/tests/googletest-master/googlemock/include/gmock/internal/: gmock-port.h
mini_project/tests/googletest-master/googletest/: CMakeLists.txt
mini_project/tests/googletest-master/googletest/include/gtest/: gtest-death-test.h  gtest-matchers.h  gtest-printers.h  gtest.h
mini_project/tests/googletest-master/googletest/include/gtest/internal/: gtest-filepath.h  gtest-internal.h  gtest-port.h  gtest-string.h
mini_project/tests/googletest-master/googletest/src/: gtest-death-test.cc  gtest-filepath.cc  gtest-internal-inl.h  gtest.cc
mini_project/tests/googletest-master/googletest/test/: googletest-output-test_.cc
